--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6"
   },
