--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
         "react"],
     "plugins": [
         "transform-class-properties",
+        "transform-regexp-constructors",
         ["transform-object-rest-spread", {"useBuiltIns": true}],
         ["transform-react-jsx", {"useBuiltIns": true}],
         ["transform-runtime", {
